--- a/FrontEndWebNgheNhac/main.html
+++ b/FrontEndWebNgheNhac/main.html
@@ -80,7 +80,7 @@
 
 
         <div class="song_side">
-            <nav>
+            <nav class ="navbar">
                 <ul>
                     <li>Discover <span></span></li>
                     <li>MY LIBRARY </li>
