--- a/FrontEndWebNgheNhac/main.html
+++ b/FrontEndWebNgheNhac/main.html
@@ -13,12 +13,25 @@
 </head>
 <body>
     <header>
-        <div class="menu_side">
+        <nav class ="navbar">
             <h1 class="title"><i class='bx bxl-squarespace logo' ></i>Spotifai</h1>
+            <ul>
+                <li>Discover <span></span></li>
+                <li>MY LIBRARY </li>
+                <li>Genre</li>
+            </ul>
+            <div class="search">
+                <i class="bi bi-search"></i>
+                <input type="text" placeholder="Search Music ...">
+            </div>
+            <div class="user">
+                <img src="accests/img/Ka.jpg" alt="user" title="Anh Ka đang nghe nhạc">
+            </div>
+        </nav>
+        <div class="menu_side">
             <div class="playlist">
-                <h4 class="active"><span></span><i class="bi bi-music-note-beamed"></i> Playlist</h4>
-                <h4><span></span><i class="bi bi-music-note-beamed"></i> Last Listening</h4>
-                <h4><span></span><i class="bi bi-music-note-beamed"></i> Recommended</h4>
+                <h4 class="menu_select active"><span></span><i class="bi bi-music-note-beamed"></i> Playlist</h4>
+                <h4 class="menu_select"><span></span><i class="bi bi-music-note-beamed"></i> Recommended</h4>
             </div>
             <div class="menu_song">
                 <li class="songItem">
@@ -75,25 +88,18 @@
                     </h5>
                         <i class="bi playlistPlay bi-play-circle-fill" id="6"></i>
                 </li>
+
+                <div class="library">
+                    <h4 class="header_library">Tạo danh sách đầu tiên của bạn</h4>
+                    <p class="libraby_content">Rất dễ! Chúng tôi sẽ giúp bạn</p>
+                    <button class="library_btn">Tạo danh sách phát</button>
+                </div>
             </div>
+
         </div>
 
 
         <div class="song_side">
-            <nav class ="navbar">
-                <ul>
-                    <li>Discover <span></span></li>
-                    <li>MY LIBRARY </li>
-                    <li>RADIO </li>
-                </ul>
-                <div class="search">
-                    <i class="bi bi-search"></i>
-                    <input type="text" placeholder="Search Music ...">
-                </div>
-                <div class="user">
-                    <img src="accests/img/Ka.jpg" alt="user" title="Anh Ka đang nghe nhạc">
-                </div>
-            </nav>
             <div class="content">
                 <h1>You never know it - 3T</h1>
                 <p>
@@ -237,8 +243,43 @@
                     <li>
                         <img src="accests/img/art11.jpg" alt="avt" title="art1">
                     </li>
-                    
                 </div>
+                
+            </div>
+            <div class="item">
+                <li>
+                    <img src="accests/img/art1.jpg" alt="avt" title="art1">
+                </li>
+                <li>
+                    <img src="accests/img/art2.jpg" alt="avt" title="art1">
+                </li>
+                <li>
+                    <img src="accests/img/art3.jpg" alt="avt" title="art1">
+                </li>
+                <li>
+                    <img src="accests/img/art4.jpg" alt="avt" title="art1">
+                </li>
+                <li>
+                    <img src="accests/img/art5.jpg" alt="avt" title="art1">
+                </li>
+                <li>
+                    <img src="accests/img/art6.jpg" alt="avt" title="art1">
+                </li>
+                <li>
+                    <img src="accests/img/art7.jpg" alt="avt" title="art1">
+                </li>
+                <li>
+                    <img src="accests/img/art8.jpg" alt="avt" title="art1">
+                </li>
+                <li>
+                    <img src="accests/img/art9.jpg" alt="avt" title="art1">
+                </li>
+                <li>
+                    <img src="accests/img/art10.jpg" alt="avt" title="art1">
+                </li>
+                <li>
+                    <img src="accests/img/art11.jpg" alt="avt" title="art1">
+                </li>
             </div>
         </div>
 
